checker/ML3/parser.output
   0  $accept : %entry% $end

   1  toplevel : Derivation
   2           | EOF

   3  Derivation : Judgment BY RName LBRACE RBRACE
   4             | Judgment BY RName LBRACE Derivs
   5             | Judgment error
   6             | Judgment BY RName error
   7             | Judgment BY RName LBRACE error

   8  RName : ID
   9        | LCID

  10  Derivs : Derivation RBRACE
  11         | Derivation SEMI RBRACE
  12         | Derivation SEMI Derivs
  13         | Derivation error

  14  Judgment : Env VDASH Exp EVALTO Val
  15           | INTL PLUS INTL IS INTL
  16           | INTL MULT INTL IS INTL
  17           | INTL MINUS INTL IS INTL
  18           | INTL IS LESS THAN INTL
  19           | INTL IS NOT LESS THAN INTL
  20           | Env VDASH Exp error
  21           | Env VDASH Exp EVALTO error
  22           | INTL PLUS error
  23           | INTL PLUS INTL error
  24           | INTL PLUS INTL IS error
  25           | INTL MULT error
  26           | INTL MULT INTL error
  27           | INTL MULT INTL IS error
  28           | INTL MINUS error
  29           | INTL MINUS INTL error
  30           | INTL MINUS INTL IS error

  31  partialj : Env VDASH Exp EVALTO QM
  32           | INTL PLUS INTL IS QM
  33           | INTL MULT INTL IS QM
  34           | INTL MINUS INTL IS QM
  35           | Env VDASH Exp error
  36           | Env VDASH Exp EVALTO error
  37           | INTL PLUS error
  38           | INTL PLUS INTL error
  39           | INTL PLUS INTL IS error
  40           | INTL MULT error
  41           | INTL MULT INTL error
  42           | INTL MULT INTL IS error
  43           | INTL MINUS error
  44           | INTL MINUS INTL error
  45           | INTL MINUS INTL IS error

  46  Env :
  47      | Env2 LCID EQ Val

  48  Env2 :
  49       | Env2 LCID EQ Val COMMA

  50  Exp : LongExp
  51      | Exp1
  52      | Exp1 BinOp1 LongExp
  53      | Exp2 BinOp2 LongExp
  54      | Exp3 BinOp3 LongExp

  55  LongExp : IF Exp THEN Exp ELSE Exp
  56          | LET LCID EQ Exp IN Exp
  57          | FUN LCID RARROW Exp

  58  Exp1 : Exp1 BinOp1 Exp2
  59       | Exp2

  60  Exp2 : Exp2 BinOp2 Exp3
  61       | Exp3

  62  Exp3 : Exp3 BinOp3 Exp4
  63       | Exp4

  64  Exp4 : Exp4 AExp
  65       | MinExp

  66  BinOp1 : LT

  67  BinOp2 : CROSS
  68         | HYPHEN

  69  BinOp3 : AST

  70  MinExp : HYPHEN INTL
  71         | AExp

  72  AExp : INTL
  73       | TRUE
  74       | FALSE
  75       | LCID
  76       | LPAREN Exp RPAREN
  77       | LPAREN Exp error

  78  Val : INTL
  79      | HYPHEN INTL
  80      | TRUE
  81      | FALSE
  82      | LPAREN Env RPAREN LBRACKET FUN LCID RARROW Exp RBRACKET

  83  %entry% : '\001' toplevel
  84          | '\002' partialj

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	'\002'  shift 2
	.  error

	%entry%  goto 3


state 1
	%entry% : '\001' . toplevel  (83)
	Env : .  (46)
	Env2 : .  (48)

	EOF  shift 4
	INTL  shift 5
	LCID  reduce 48
	VDASH  reduce 46

	toplevel  goto 6
	Derivation  goto 7
	Judgment  goto 8
	Env  goto 9
	Env2  goto 10


state 2
	%entry% : '\002' . partialj  (84)
	Env : .  (46)
	Env2 : .  (48)

	INTL  shift 11
	LCID  reduce 48
	VDASH  reduce 46

	partialj  goto 12
	Env  goto 13
	Env2  goto 10


state 3
	$accept : %entry% . $end  (0)

	$end  accept


state 4
	toplevel : EOF .  (2)

	.  reduce 2


state 5
	Judgment : INTL . PLUS INTL IS INTL  (15)
	Judgment : INTL . MULT INTL IS INTL  (16)
	Judgment : INTL . MINUS INTL IS INTL  (17)
	Judgment : INTL . IS LESS THAN INTL  (18)
	Judgment : INTL . IS NOT LESS THAN INTL  (19)
	Judgment : INTL . PLUS error  (22)
	Judgment : INTL . PLUS INTL error  (23)
	Judgment : INTL . PLUS INTL IS error  (24)
	Judgment : INTL . MULT error  (25)
	Judgment : INTL . MULT INTL error  (26)
	Judgment : INTL . MULT INTL IS error  (27)
	Judgment : INTL . MINUS error  (28)
	Judgment : INTL . MINUS INTL error  (29)
	Judgment : INTL . MINUS INTL IS error  (30)

	PLUS  shift 14
	MINUS  shift 15
	MULT  shift 16
	IS  shift 17
	.  error


state 6
	%entry% : '\001' toplevel .  (83)

	.  reduce 83


state 7
	toplevel : Derivation .  (1)

	.  reduce 1


state 8
	Derivation : Judgment . BY RName LBRACE RBRACE  (3)
	Derivation : Judgment . BY RName LBRACE Derivs  (4)
	Derivation : Judgment . error  (5)
	Derivation : Judgment . BY RName error  (6)
	Derivation : Judgment . BY RName LBRACE error  (7)

	error  shift 18
	BY  shift 19
	.  error


state 9
	Judgment : Env . VDASH Exp EVALTO Val  (14)
	Judgment : Env . VDASH Exp error  (20)
	Judgment : Env . VDASH Exp EVALTO error  (21)

	VDASH  shift 20
	.  error


state 10
	Env : Env2 . LCID EQ Val  (47)
	Env2 : Env2 . LCID EQ Val COMMA  (49)

	LCID  shift 21
	.  error


state 11
	partialj : INTL . PLUS INTL IS QM  (32)
	partialj : INTL . MULT INTL IS QM  (33)
	partialj : INTL . MINUS INTL IS QM  (34)
	partialj : INTL . PLUS error  (37)
	partialj : INTL . PLUS INTL error  (38)
	partialj : INTL . PLUS INTL IS error  (39)
	partialj : INTL . MULT error  (40)
	partialj : INTL . MULT INTL error  (41)
	partialj : INTL . MULT INTL IS error  (42)
	partialj : INTL . MINUS error  (43)
	partialj : INTL . MINUS INTL error  (44)
	partialj : INTL . MINUS INTL IS error  (45)

	PLUS  shift 22
	MINUS  shift 23
	MULT  shift 24
	.  error


state 12
	%entry% : '\002' partialj .  (84)

	.  reduce 84


state 13
	partialj : Env . VDASH Exp EVALTO QM  (31)
	partialj : Env . VDASH Exp error  (35)
	partialj : Env . VDASH Exp EVALTO error  (36)

	VDASH  shift 25
	.  error


state 14
	Judgment : INTL PLUS . INTL IS INTL  (15)
	Judgment : INTL PLUS . error  (22)
	Judgment : INTL PLUS . INTL error  (23)
	Judgment : INTL PLUS . INTL IS error  (24)

	error  shift 26
	INTL  shift 27
	.  error


state 15
	Judgment : INTL MINUS . INTL IS INTL  (17)
	Judgment : INTL MINUS . error  (28)
	Judgment : INTL MINUS . INTL error  (29)
	Judgment : INTL MINUS . INTL IS error  (30)

	error  shift 28
	INTL  shift 29
	.  error


state 16
	Judgment : INTL MULT . INTL IS INTL  (16)
	Judgment : INTL MULT . error  (25)
	Judgment : INTL MULT . INTL error  (26)
	Judgment : INTL MULT . INTL IS error  (27)

	error  shift 30
	INTL  shift 31
	.  error


state 17
	Judgment : INTL IS . LESS THAN INTL  (18)
	Judgment : INTL IS . NOT LESS THAN INTL  (19)

	LESS  shift 32
	NOT  shift 33
	.  error


state 18
	Derivation : Judgment error .  (5)

	.  reduce 5


state 19
	Derivation : Judgment BY . RName LBRACE RBRACE  (3)
	Derivation : Judgment BY . RName LBRACE Derivs  (4)
	Derivation : Judgment BY . RName error  (6)
	Derivation : Judgment BY . RName LBRACE error  (7)

	ID  shift 34
	LCID  shift 35
	.  error

	RName  goto 36


state 20
	Judgment : Env VDASH . Exp EVALTO Val  (14)
	Judgment : Env VDASH . Exp error  (20)
	Judgment : Env VDASH . Exp EVALTO error  (21)

	LPAREN  shift 37
	LCID  shift 38
	INTL  shift 39
	HYPHEN  shift 40
	IF  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LET  shift 44
	FUN  shift 45
	.  error

	Exp  goto 46
	LongExp  goto 47
	Exp1  goto 48
	Exp2  goto 49
	Exp3  goto 50
	Exp4  goto 51
	AExp  goto 52
	MinExp  goto 53


state 21
	Env : Env2 LCID . EQ Val  (47)
	Env2 : Env2 LCID . EQ Val COMMA  (49)

	EQ  shift 54
	.  error


state 22
	partialj : INTL PLUS . INTL IS QM  (32)
	partialj : INTL PLUS . error  (37)
	partialj : INTL PLUS . INTL error  (38)
	partialj : INTL PLUS . INTL IS error  (39)

	error  shift 55
	INTL  shift 56
	.  error


state 23
	partialj : INTL MINUS . INTL IS QM  (34)
	partialj : INTL MINUS . error  (43)
	partialj : INTL MINUS . INTL error  (44)
	partialj : INTL MINUS . INTL IS error  (45)

	error  shift 57
	INTL  shift 58
	.  error


state 24
	partialj : INTL MULT . INTL IS QM  (33)
	partialj : INTL MULT . error  (40)
	partialj : INTL MULT . INTL error  (41)
	partialj : INTL MULT . INTL IS error  (42)

	error  shift 59
	INTL  shift 60
	.  error


state 25
	partialj : Env VDASH . Exp EVALTO QM  (31)
	partialj : Env VDASH . Exp error  (35)
	partialj : Env VDASH . Exp EVALTO error  (36)

	LPAREN  shift 37
	LCID  shift 38
	INTL  shift 39
	HYPHEN  shift 40
	IF  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LET  shift 44
	FUN  shift 45
	.  error

	Exp  goto 61
	LongExp  goto 47
	Exp1  goto 48
	Exp2  goto 49
	Exp3  goto 50
	Exp4  goto 51
	AExp  goto 52
	MinExp  goto 53


state 26
	Judgment : INTL PLUS error .  (22)

	.  reduce 22


state 27
	Judgment : INTL PLUS INTL . IS INTL  (15)
	Judgment : INTL PLUS INTL . error  (23)
	Judgment : INTL PLUS INTL . IS error  (24)

	error  shift 62
	IS  shift 63
	.  error


state 28
	Judgment : INTL MINUS error .  (28)

	.  reduce 28


state 29
	Judgment : INTL MINUS INTL . IS INTL  (17)
	Judgment : INTL MINUS INTL . error  (29)
	Judgment : INTL MINUS INTL . IS error  (30)

	error  shift 64
	IS  shift 65
	.  error


state 30
	Judgment : INTL MULT error .  (25)

	.  reduce 25


state 31
	Judgment : INTL MULT INTL . IS INTL  (16)
	Judgment : INTL MULT INTL . error  (26)
	Judgment : INTL MULT INTL . IS error  (27)

	error  shift 66
	IS  shift 67
	.  error


state 32
	Judgment : INTL IS LESS . THAN INTL  (18)

	THAN  shift 68
	.  error


state 33
	Judgment : INTL IS NOT . LESS THAN INTL  (19)

	LESS  shift 69
	.  error


state 34
	RName : ID .  (8)

	.  reduce 8


state 35
	RName : LCID .  (9)

	.  reduce 9


state 36
	Derivation : Judgment BY RName . LBRACE RBRACE  (3)
	Derivation : Judgment BY RName . LBRACE Derivs  (4)
	Derivation : Judgment BY RName . error  (6)
	Derivation : Judgment BY RName . LBRACE error  (7)

	error  shift 70
	LBRACE  shift 71
	.  error


state 37
	AExp : LPAREN . Exp RPAREN  (76)
	AExp : LPAREN . Exp error  (77)

	LPAREN  shift 37
	LCID  shift 38
	INTL  shift 39
	HYPHEN  shift 40
	IF  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LET  shift 44
	FUN  shift 45
	.  error

	Exp  goto 72
	LongExp  goto 47
	Exp1  goto 48
	Exp2  goto 49
	Exp3  goto 50
	Exp4  goto 51
	AExp  goto 52
	MinExp  goto 53


state 38
	AExp : LCID .  (75)

	.  reduce 75


state 39
	AExp : INTL .  (72)

	.  reduce 72


state 40
	MinExp : HYPHEN . INTL  (70)

	INTL  shift 73
	.  error


state 41
	LongExp : IF . Exp THEN Exp ELSE Exp  (55)

	LPAREN  shift 37
	LCID  shift 38
	INTL  shift 39
	HYPHEN  shift 40
	IF  shift 41
	TRUE  shift 42
	FALSE  shift 43
	LET  shift 44
	FUN  shift 45
	.  error

	Exp  goto 74
	LongExp  goto 47
	Exp1  goto 48
	Exp2  goto 49
	Exp3  goto 50
	Exp4  goto 51
	AExp  goto 52
	MinExp  goto 53


state 42
	AExp : TRUE .  (73)

	.  reduce 73


state 43
	AExp : FALSE .  (74)

	.  reduce 74


state 44
	LongExp : LET . LCID EQ Exp IN Exp  (56)

	LCID  shift 75
	.  error


state 45
	LongExp : FUN . LCID RARROW Exp  (57)

	LCID  shift 76
	.  error


state 46
	Judgment : Env VDASH Exp . EVALTO Val  (14)
	Judgment : Env VDASH Exp . error  (20)
	Judgment : Env VDASH Exp . EVALTO error  (21)

	error  shift 77
	EVALTO  shift 78
	.  error


state 47
	Exp : LongExp .  (50)

	.  reduce 50


state 48
	Exp : Exp1 .  (51)
	Exp : Exp1 . BinOp1 LongExp  (52)
	Exp1 : Exp1 . BinOp1 Exp2  (58)

	LT  shift 79
	error  reduce 51
	RPAREN  reduce 51
	RBRACKET  reduce 51
	EVALTO  reduce 51
	THEN  reduce 51
	ELSE  reduce 51
	IN  reduce 51

	BinOp1  goto 80


state 49
	Exp : Exp2 . BinOp2 LongExp  (53)
	Exp1 : Exp2 .  (59)
	Exp2 : Exp2 . BinOp2 Exp3  (60)

	CROSS  shift 81
	HYPHEN  shift 82
	error  reduce 59
	RPAREN  reduce 59
	RBRACKET  reduce 59
	EVALTO  reduce 59
	LT  reduce 59
	THEN  reduce 59
	ELSE  reduce 59
	IN  reduce 59

	BinOp2  goto 83


state 50
	Exp : Exp3 . BinOp3 LongExp  (54)
	Exp2 : Exp3 .  (61)
	Exp3 : Exp3 . BinOp3 Exp4  (62)

	AST  shift 84
	error  reduce 61
	RPAREN  reduce 61
	RBRACKET  reduce 61
	EVALTO  reduce 61
	CROSS  reduce 61
	HYPHEN  reduce 61
	LT  reduce 61
	THEN  reduce 61
	ELSE  reduce 61
	IN  reduce 61

	BinOp3  goto 85


state 51
	Exp3 : Exp4 .  (63)
	Exp4 : Exp4 . AExp  (64)

	LPAREN  shift 37
	LCID  shift 38
	INTL  shift 39
	TRUE  shift 42
	FALSE  shift 43
	error  reduce 63
	RPAREN  reduce 63
	RBRACKET  reduce 63
	EVALTO  reduce 63
	AST  reduce 63
	CROSS  reduce 63
	HYPHEN  reduce 63
	LT  reduce 63
	THEN  reduce 63
	ELSE  reduce 63
	IN  reduce 63

	AExp  goto 86


state 52
	MinExp : AExp .  (71)

	.  reduce 71


state 53
	Exp4 : MinExp .  (65)

	.  reduce 65


state 54
	Env : Env2 LCID EQ . Val  (47)
	Env2 : Env2 LCID EQ . Val COMMA  (49)

	LPAREN  shift 87
	INTL  shift 88
	HYPHEN  shift 89
	TRUE  shift 90
	FALSE  shift 91
	.  error

	Val  goto 92


state 55
	partialj : INTL PLUS error .  (37)

	.  reduce 37


state 56
	partialj : INTL PLUS INTL . IS QM  (32)
	partialj : INTL PLUS INTL . error  (38)
	partialj : INTL PLUS INTL . IS error  (39)

	error  shift 93
	IS  shift 94
	.  error


state 57
	partialj : INTL MINUS error .  (43)

	.  reduce 43


state 58
	partialj : INTL MINUS INTL . IS QM  (34)
	partialj : INTL MINUS INTL . error  (44)
	partialj : INTL MINUS INTL . IS error  (45)

	error  shift 95
	IS  shift 96
	.  error
